# FtcRobotController-2022

./: build.common.gradle  build.gradle
TeamCode/: build.gradle
TeamCode/src/main/cpp/: CMakeLists.txt  main.cpp  main.h
TeamCode/src/main/cpp/include/: camera.h  cameraPositionDetection.h  cameracontroller.h  imageBuffers.h  logger.h  signalDetection.h  signalSleeveDetection.h  transformLocator.h
TeamCode/src/main/cpp/src/: camera.cpp  cameraPositionDetection.cpp  cameracontroller.cpp  imageBuffers.cpp  logger.cpp  signalDetection.cpp  signalSleeveDetection.cpp  transformLocator.cpp
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: Robot.java  Robot2.java  Scrimmage.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/autonomous/: Autonomous.java  JVAuto.java  ScrimmageBlueLeft.java  ScrimmageBlueRight.java  ScrimmageRedLeft.java  ScrimmageRedRight.java  VAuto.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/autonomous/opmodes/: CameraOpMode.java  JVAuto.java  MainBlueLeft.java  MainBlueRight.java  MainRedLeft.java  MainRedRight.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/autonomous/opmodes/scrimmage/: ScrimmageBlueLeft.java  ScrimmageBlueRight.java  ScrimmageRedLeft.java  ScrimmageRedRight.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/driver/: Driver.java  DriverInput.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/driver/opmodes/: JvDriverOpMode.java  MainDriverOpMode.java  ScrimmageOpMode.java  Testing.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/movement/: Hardware.java  Movement.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/autonomous/: ScrimmageBlueLeft.java  ScrimmageBlueRight.java  ScrimmageRedLeft.java  ScrimmageRedRight.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/driver/: ScrimmageOpMode.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/other/: Datalogger.java  NativeLogging.java  Tester.java  TestingIMU.java  Vector2.java  Vector3.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/sensor/: Camera.java  CameraController.java  Encoder.java  Encoders.java  IMU.java  Sensors.java  SleeveDetection.java  SmartAccelerationIntegrator.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/utils/: Vector2.java  Vector3.java
